# eventsourcing

./: .envrc  .gitignore  .stylish-haskell.yaml  BUILD.bazel  README.adoc  cabal.project  flake.nix  hie.yaml
.devcontainer/: Dockerfile  devcontainer.json  nix.conf  profile.sh
direnv/: use_nix.sh
doc/: aggregate-stores.adoc  migrations.adoc  occ.adoc  tutorial.adoc
eventsourcing/: CHANGELOG.md  LICENSE  eventsourcing.cabal
eventsourcing-postgresql/: CHANGELOG.md  LICENSE  eventsourcing-postgresql.cabal
eventsourcing-postgresql/src/Database/CQRS/: PostgreSQL.hs
eventsourcing-postgresql/src/Database/CQRS/PostgreSQL/: Internal.hs  Migration.hs  Projection.hs  SQLQuery.hs  Stream.hs  StreamFamily.hs  TrackingTable.hs
eventsourcing-postgresql/src/Database/CQRS/PostgreSQL/TrackingTable/: Internal.hs
eventsourcing/src/Database/: CQRS.hs
eventsourcing/src/Database/CQRS/: Error.hs  Event.hs  InMemory.hs  Interruptible.hs  Projection.hs  ReadModel.hs  Stream.hs  StreamFamily.hs  TabularData.hs  TaskManager.hs  Transformer.hs
eventsourcing/src/Database/CQRS/ReadModel/: AggregateStore.hs  TopUp.hs
eventsourcing/src/Database/CQRS/TabularData/: Internal.hs  Optimisation.hs
eventsourcing/test/: Helpers.hs  Main.hs
eventsourcing/test/Database/CQRS/: InMemoryTest.hs  TabularDataTest.hs  TransformerTest.hs
nix/: haskell.nix  shell.nix  sources.nix
