package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

haskell_library(
    name = "eventsourcing",
    srcs = glob(["eventsourcing/src/**/*.hs"]),
    deps = [
        "//nix/haskell:base",
        "//nix/haskell:deepseq",
        "//nix/haskell:hashable",
        "//nix/haskell:mtl",
        "//nix/haskell:pipes",
        "//nix/haskell:stm",
        "//nix/haskell:unordered-containers",
    ],
)

haskell_library(
    name = "eventsourcing-postgresql",
    srcs = glob(["eventsourcing-postgresql/src/**/*.hs"]),
    deps = [
        "//nix/haskell:base",
        "//nix/haskell:postgresql-simple",
    ],
)
