package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
    "haskell_test",
)

haskell_library(
    name = "eventsourcing",
    srcs = glob(["eventsourcing/src/**/*.hs"]),
    deps = [
        "//nix/haskell:base",
        "//nix/haskell:deepseq",
        "//nix/haskell:hashable",
        "//nix/haskell:mtl",
        "//nix/haskell:pipes",
        "//nix/haskell:stm",
        "//nix/haskell:unordered-containers",
    ],
)

haskell_test(
    name = "eventsourcing-test",
    srcs = glob(["eventsourcing/test/**/*.hs"]),
    deps = [
        ":eventsourcing",
        "//nix/haskell:base",
        "//nix/haskell:hedgehog",
        "//nix/haskell:mtl",
        "//nix/haskell:pipes",
        "//nix/haskell:tasty",
        "//nix/haskell:tasty-hedgehog",
    ],
    expected_covered_expressions_percentage = 80,
    expected_uncovered_expression_count = 10,
)

haskell_library(
    name = "eventsourcing-postgresql",
    srcs = glob(["eventsourcing-postgresql/src/**/*.hs"]),
    deps = [
        "//nix/haskell:base",
        "//nix/haskell:postgresql-simple",
    ],
)
