cabal-version:       >=1.10
name:                eventsourcing-postgresql
version:             0.1.0.0
synopsis:            PostgreSQL adapter for eventsourcing
license-file:        LICENSE
author:              Tom Feron
maintainer:          thomas.feron@redspline.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall

  exposed-modules:
    Database.CQRS.PostgreSQL
    Database.CQRS.PostgreSQL.Migration
    Database.CQRS.PostgreSQL.Projection
    Database.CQRS.PostgreSQL.SQLQuery
    Database.CQRS.PostgreSQL.Stream
    Database.CQRS.PostgreSQL.StreamFamily
    Database.CQRS.PostgreSQL.TrackingTable

  other-modules:
    Database.CQRS.PostgreSQL.Internal

  build-depends:
    base >=4.12 && <5,
    bytestring >=0.10,
    eventsourcing,
    hashable,
    mtl,
    pipes,
    postgresql-simple >=0.6,
    stm,
    unordered-containers
